syntax = "proto3";

package pulumicost.v1;

option go_package = "github.com/rshade/pulumicost-spec/sdk/go/proto/pulumicost/v1;pbc";

// FocusServiceCategory represents the standard service classifications
// defined in FinOps FOCUS 1.2.
enum FocusServiceCategory {
  FOCUS_SERVICE_CATEGORY_UNSPECIFIED = 0;
  FOCUS_SERVICE_CATEGORY_COMPUTE = 1;
  FOCUS_SERVICE_CATEGORY_STORAGE = 2;
  FOCUS_SERVICE_CATEGORY_NETWORK = 3;
  FOCUS_SERVICE_CATEGORY_DATABASE = 4;
  FOCUS_SERVICE_CATEGORY_ANALYTICS = 5;
  FOCUS_SERVICE_CATEGORY_MACHINE_LEARNING = 6;
  FOCUS_SERVICE_CATEGORY_MANAGEMENT = 7;
  FOCUS_SERVICE_CATEGORY_SECURITY = 8;
  FOCUS_SERVICE_CATEGORY_DEVELOPER_TOOLS = 9;
  FOCUS_SERVICE_CATEGORY_OTHER = 10;
}

// FocusChargeCategory represents the nature of the charge.
enum FocusChargeCategory {
  FOCUS_CHARGE_CATEGORY_UNSPECIFIED = 0;
  FOCUS_CHARGE_CATEGORY_USAGE = 1;
  FOCUS_CHARGE_CATEGORY_PURCHASE = 2;
  FOCUS_CHARGE_CATEGORY_CREDIT = 3;
  FOCUS_CHARGE_CATEGORY_TAX = 4;
  FOCUS_CHARGE_CATEGORY_REFUND = 5;
  FOCUS_CHARGE_CATEGORY_ADJUSTMENT = 6;
}

// FocusPricingCategory represents the pricing model applied.
// FOCUS 1.2 Section 2.4: Pricing Category
enum FocusPricingCategory {
  FOCUS_PRICING_CATEGORY_UNSPECIFIED = 0;
  FOCUS_PRICING_CATEGORY_STANDARD = 1;
  FOCUS_PRICING_CATEGORY_COMMITTED = 2;
  FOCUS_PRICING_CATEGORY_DYNAMIC = 3;
  FOCUS_PRICING_CATEGORY_OTHER = 4;
}

// FocusChargeClass represents the classification of charges.
// FOCUS 1.2 Section 2.4: Charge Class (New in 1.0+)
enum FocusChargeClass {
  FOCUS_CHARGE_CLASS_UNSPECIFIED = 0;
  FOCUS_CHARGE_CLASS_REGULAR = 1;
  FOCUS_CHARGE_CLASS_CORRECTION = 2;
}

// FocusChargeFrequency represents how often a charge is applied.
// FOCUS 1.2 Section 2.4: Charge Frequency
enum FocusChargeFrequency {
  FOCUS_CHARGE_FREQUENCY_UNSPECIFIED = 0;
  FOCUS_CHARGE_FREQUENCY_ONE_TIME = 1;
  FOCUS_CHARGE_FREQUENCY_RECURRING = 2;
  FOCUS_CHARGE_FREQUENCY_USAGE_BASED = 3;
}

// FocusCommitmentDiscountCategory represents the type of commitment discount.
// FOCUS 1.2 Section 2.6: Commitment Discounts
enum FocusCommitmentDiscountCategory {
  FOCUS_COMMITMENT_DISCOUNT_CATEGORY_UNSPECIFIED = 0;
  FOCUS_COMMITMENT_DISCOUNT_CATEGORY_SPEND = 1;
  FOCUS_COMMITMENT_DISCOUNT_CATEGORY_USAGE = 2;
}

// FocusCommitmentDiscountStatus represents the utilization status of a
// commitment discount. FOCUS 1.2 Section 3.17: Commitment Discount Status
enum FocusCommitmentDiscountStatus {
  FOCUS_COMMITMENT_DISCOUNT_STATUS_UNSPECIFIED = 0;
  // Used: Charges utilizing a specific commitment discount amount.
  FOCUS_COMMITMENT_DISCOUNT_STATUS_USED = 1;
  // Unused: Charges representing the unused portion of a commitment discount.
  FOCUS_COMMITMENT_DISCOUNT_STATUS_UNUSED = 2;
}

// FocusCapacityReservationStatus represents the utilization status of a
// capacity reservation. FOCUS 1.2 Section 3.7: Capacity Reservation Status
enum FocusCapacityReservationStatus {
  FOCUS_CAPACITY_RESERVATION_STATUS_UNSPECIFIED = 0;
  // Used: Charges utilizing a specific capacity reservation amount.
  FOCUS_CAPACITY_RESERVATION_STATUS_USED = 1;
  // Unused: Charges representing the unused portion of a capacity reservation.
  FOCUS_CAPACITY_RESERVATION_STATUS_UNUSED = 2;
}

// FieldSupportStatus represents the support status of a FOCUS field for a given
// resource type in dry-run introspection. Used in DryRunResponse to indicate whether
// a plugin can populate specific fields for a queried resource type.
//
// Usage in dry-run responses:
//   - SUPPORTED: Field is always populated for this resource type
//   - UNSUPPORTED: Field is never populated (e.g., K8s-specific fields on AWS)
//   - CONDITIONAL: Field depends on resource configuration (provide condition_description)
//   - DYNAMIC: Field requires runtime data to determine (provide condition_description)
enum FieldSupportStatus {
  // Default value - unknown or not determined.
  // Should not be used in well-formed responses; indicates incomplete implementation.
  FIELD_SUPPORT_STATUS_UNSPECIFIED = 0;

  // Field is always populated for this resource type.
  // Example: service_category is always available for compute resources.
  FIELD_SUPPORT_STATUS_SUPPORTED = 1;

  // Field is never populated for this resource type.
  // Example: kubernetes-specific fields on AWS EC2 resources.
  FIELD_SUPPORT_STATUS_UNSUPPORTED = 2;

  // Field is populated based on resource configuration or provider settings.
  // When using this status, condition_description MUST explain the condition.
  // Example: availability_zone only populated for regional resources in multi-AZ providers.
  FIELD_SUPPORT_STATUS_CONDITIONAL = 3;

  // Field requires runtime data to determine value; cannot be fully introspected.
  // When using this status, condition_description SHOULD explain what data is needed.
  // Example: actual billed_cost values require querying billing APIs.
  FIELD_SUPPORT_STATUS_DYNAMIC = 4;
}

// GrowthType represents the mathematical model used for projecting cost growth.
// Used in ResourceDescriptor and GetProjectedCostRequest for forward-looking projections.
enum GrowthType {
  // Default value - treated identically to GROWTH_TYPE_NONE.
  // When unset, no growth is applied to projections.
  GROWTH_TYPE_UNSPECIFIED = 0;

  // No growth applied to projections.
  // Cost projections remain constant at the base cost.
  GROWTH_TYPE_NONE = 1;

  // Linear (additive) growth per projection period.
  // Formula: cost_at_n = base_cost * (1 + rate * n)
  // Requires growth_rate to be set.
  GROWTH_TYPE_LINEAR = 2;

  // Exponential (compounding) growth per projection period.
  // Formula: cost_at_n = base_cost * (1 + rate)^n
  // Requires growth_rate to be set.
  GROWTH_TYPE_EXPONENTIAL = 3;
}
